[metadata]
name = PressureClampAnalysis
version = 0.1.0
license = MIT
description = A package for basic exploration and analysis of pressure clamp data.
long_description = file: README.rst
author = Michael Young
author_email = neuromyoung@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10
    Programming Language :: Python :: 3
[options]
packages = find:
package_dif =
    =src
include_package_data = True
install_requires =


[options.packages.find]
where = src